--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@stripe/stripe-js": "^1.32.0",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
-    "next": "12.2.0",
+    "next": "^12.2.5",
     "next-auth": "^4.9.0",
     "prismic-dom": "^2.2.7",
     "react": "18.2.0",
